crates/dbt-jinja/minijinja/tests/snapshots/test_templates__vm_block_fragments@fragment_simple.txt.snap
---
source: minijinja/tests/test_templates.rs
description: "<title>{% block title %}Shouldn't show up{% endblock %}</title>\n{% block fragment %}{{ var }}{% endblock fragment %}\nAlso shouldn't show up"
info:
  var: foo
input_file: minijinja/tests/fragment-inputs/fragment_simple.txt
---
foo

