crates/dbt-jinja/minijinja/tests/snapshots/test_templates__vm_block_fragments@fragment_simple_extend.txt.snap
---
source: minijinja/tests/test_templates.rs
description: "{% extends \"simple_layout.txt\" %}\n\n{% block fragment %}\nThis should appear\n{% endblock %}"
info:
  var: foo
input_file: minijinja/tests/fragment-inputs/fragment_simple_extend.txt
---

This should appear


